[project]
name = "mcp-ssh-reloaded"
version = "0.1.0"
description = "MCP server for SSH sessions management."
requires-python = ">=3.10, <3.14"
readme = "README.md"
authors = [
  { name = "Jon Rogers <devnullvoid>" },
  { name = "AmritaConstant", email = "admin@amritabot.com" },
]
license = { file = "LICENSE" }
keywords = ["mcp", "ssh", "fastmcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastmcp>=3.2.0",
    "paramiko>=3.4.0",
    "pyte>=0.8.0",
]

[project.scripts]
mcp-ssh = "mcp_ssh_reloaded.__main__:main"
mcp-ssh-reloaded = "mcp_ssh_reloaded.__main__:main"

[project.urls]
Homepage = "https://github.com/AmritaBot/mcp-ssh-reloaded"
Repository = "https://github.com/AmritaBot/mcp-ssh-reloaded"
Issues = "https://github.com/AmritaBot/mcp-ssh-reloaded/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.0.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py310"
[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RUF",   # Ruff-specific rules
  "I",     # isort
  "PERF",  # pylint-performance
]
ignore = [
  "E501",   # line-too-long
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]


[tool.pyright]
typeCheckingMode = "standard"

[[tool.pyright.executionEnvironments]]
root = "tests"
typeCheckingMode = "basic"
